--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/home/index",
     "pages/category/index",
     "pages/cart/index",
-    "pages/user/index"
+    "pages/user/index",
+    "pages/goods/detail/index"
   ],
   "tabBar": {
     "color": "#000",
